--- a/templates/site/views/index.html
+++ b/templates/site/views/index.html
@@ -6,7 +6,10 @@
     <title>Testeeeeee</title>
 </head>
 <body>
-    <h1>{{titulo}}</h1>
-    <p>{{subtitulo}}</p>
+    {%include 'topo.html' %}
+
+    <h1>Index</h1>
+
+    {%include 'rodape.html' %}
 </body>
 </html>
