--- a/templates/site/views/index.html
+++ b/templates/site/views/index.html
@@ -1,15 +1,6 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Testeeeeee</title>
-</head>
-<body>
-    {%include 'topo.html' %}
+{% extends 'base.html' %}
+{% block conteudo %}
 
     <h1>Index</h1>
 
-    {%include 'rodape.html' %}
-</body>
-</html>
+{% endblock %}
