--- a/templates/site/views/base.html
+++ b/templates/site/views/base.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url('templates/assets/css/estilos.css') }}">
     <link rel="stylesheet" href="{{ url('templates/site/assets/css/site.css') }}">
 </head>
@@ -14,6 +15,7 @@
 
     {%include 'rodape.html' %}
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <script src="{{ url('templates/assets/js/scripts.js') }}"></script>
     <script src="{{ url('templates/site/assets/js/site.js') }}"></script>
 </body>
