--- a/templates/site/views/base.html
+++ b/templates/site/views/base.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>
+        {% if titulo %}
+        {{ titulo }}
+        {% else %}
+        {{ constant('SITE_NOME' )}}
+        {% endif %}
+    </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url('templates/assets/css/estilos.css') }}">
     <link rel="stylesheet" href="{{ url('templates/site/assets/css/site.css') }}">
