--- a/templates/site/views/index.html
+++ b/templates/site/views/index.html
@@ -2,7 +2,7 @@
 {% block conteudo %}
 
 <div class="container my-5">
-    <h1>Index</h1>
+    <h1>{{ 'index'|upper }}</h1>
 </div>
 
 {% endblock %}
