--- a/templates/site/views/post.html
+++ b/templates/site/views/post.html
@@ -2,11 +2,16 @@
 {% block conteudo %}
 
 <div class="container my-5">
-    
-    <h1>{{post.titulo}}</h1>
+    <div class="row">
+        <div class="col-lg-9 col-md-12">
+            <h1>{{post.titulo}}</h1>
 
-    <p>{{post.texto}}</p>
-
+            <p>{{post.texto}}</p>
+        </div>
+        <div class="col-lg-3">
+            {% include'sidebar.html' %}
+        </div>
+    </div>
 </div>
 
 {% endblock %}
