--- a/templates/site/views/base.html
+++ b/templates/site/views/base.html
@@ -21,6 +21,7 @@
 
     {%include 'rodape.html' %}
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <script src="{{ url('templates/assets/js/scripts.js') }}"></script>
     <script src="{{ url('templates/site/assets/js/site.js') }}"></script>
