--- a/templates/admin/views/base.html
+++ b/templates/admin/views/base.html
@@ -12,7 +12,9 @@
 </head>
 <body>
 
-    {% block corpo %} {% endblock %}
+    <div class="container-fluid">
+        {% block corpo %} {% endblock %}
+    </div>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
